major overhaul - redesign some tests to (hopefully) fix issues regarding concurrency - upgrade log4j2 - fix logback-classic logging inside tests to not be debug-level